# branch-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml  session.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: DIFF-DESIGN.md
examples/java-maven-jmh/: README.md  bench.toml  demo.sh  generate-repo.sh
examples/java-maven-jmh/commits/00-baseline/: README.md  bench.toml
examples/java-maven-jmh/commits/00-baseline/src/main/java/bench/: PlainTextBenchmark.java
preview/: preview.db  report.html
scripts/: copy_epoch.py  preview_report.py
src/branch_bench/: cli.py  commands.py  config.py  git.py  profiler.py  report.py  runner.py  storage.py
src/branch_bench/templates/: report.html
tests/: test_commands.py  test_config.py  test_runner.py  test_sample.py  test_storage.py
