[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-bench"
version = "0.1.0"
description = "Curate a git branch of performance improvements: verify, benchmark, profile, report"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
branch-bench = "branch_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/branch_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = []
